--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Owe No More</title>
+        <title>Owe Easy</title>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <div class="headCont">
             <div class="headings">
@@ -10,7 +10,7 @@
             </div>   
             <div class="navbarContainer">
                 <div class="para">
-                    <p>This is the navbar shadlkjhdsafklshflkashflkshflksahfsklafhslfh</p>
+                    <p>        This is the navbar        </p>
                 </div>
                 <div class="navbar">
                     <nav>
