--- a/index.html
+++ b/index.html
@@ -28,8 +28,38 @@
     </head>
     <body>
         <div class="container">           
-            <div class="Text boxes">
+            <div class="Text-boxes">
                 <p>We'll have the inputs here</p>
+                <form class="my-form">
+                    <div class="form-group">
+                        <label>Borrower: </label>
+                        <input type="text" name="user_1">
+                    </div>
+                    <div class="message">
+                        <p>Owes</p>
+                    </div>
+                    <div class="form-group">
+                        <label>Amount: </label>
+                        <input type="text" name="amount">
+                    </div>
+                    <div class="message">
+                        <p>To</p>
+                    </div>
+                    <div class="form-group">
+                        <label>Lender: </label>
+                        <input type="text" name="user_2">
+                    </div>
+                    <div class="clr"></div>
+                    <div class="form-group">
+                        <label>Email: </label>
+                        <input type="text" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label>Message: </label>
+                        <textarea name="message"></textarea>
+                    </div>
+                    <input class="button" type="submit" value="Submit" name="">
+                </form>
             </div>
         </div>
     </body>
