Modified appearance of the forms

--- a/index.html
+++ b/index.html
@@ -27,40 +27,22 @@
         </div>
     </head>
     <body>
-        <div class="container">           
+        <div class="container">          
             <div class="Text-boxes">
-                <p>We'll have the inputs here</p>
-                <form class="my-form">
-                    <div class="form-group">
-                        <label>Borrower: </label>
-                        <input type="text" name="user_1">
-                    </div>
-                    <div class="message">
-                        <p>Owes</p>
-                    </div>
-                    <div class="form-group">
-                        <label>Amount: </label>
-                        <input type="text" name="amount">
-                    </div>
-                    <div class="message">
-                        <p>To</p>
-                    </div>
-                    <div class="form-group">
-                        <label>Lender: </label>
-                        <input type="text" name="user_2">
-                    </div>
-                    <div class="clr"></div>
-                    <div class="form-group">
-                        <label>Email: </label>
-                        <input type="text" name="email">
-                    </div>
-                    <div class="form-group">
-                        <label>Message: </label>
-                        <textarea name="message"></textarea>
-                    </div>
-                    <input class="button" type="submit" value="Submit" name="">
-                </form>
+                <h3>Add your transactions here:</h3>
+                <form>
+                <input type="text" placeholder="Name of borrower">
+                owes $
+                <input type="text" placeholder="Enter amount here">
+                to
+                <input type="text" placeholder="Name of lender">
+                for
+                <input type="text" placeholder="The transaction">
+                <button>Add</button>
+                <button>Done</button>
+            </form>
             </div>
+            
         </div>
     </body>
     
