--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Owe Easy</title>
+    <script src="https://kit.fontawesome.com/de20837442.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <!--link rel="stylesheet" href="fontawesome/css/all.css"-->
 </head>
     <body>
     <section id="welcome_section">
