--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           </div><!--End of col-->
           </div><!--End of row-->
           <div class="btn_div">
-            <button class="btn btn-outline-success btn-lg my-2" id="start"><a href="#groupmates_section"><i class="fas fa-coins"></i>
-              Get Started!</a>
-            </button>
+            <a href="#groupmates_section"><button class="btn btn-outline-success btn-lg my-2" id="start"><i class="fas fa-coins"></i>
+              Get Started!
+            </button></a>
           </div>
           
       </div><!--End of container-->
