--- a/index.html
+++ b/index.html
@@ -75,17 +75,11 @@
               <form class="form-inline">
               <div style="margin-top: 5%;" id="transactions_div">
                 <select class="custom-select added_gpmates" id="added_participants_1">
-                  <option selected>Group mate...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                  <option selected></option>
                 </select>
                 <span class="random_text">owes</span>
                 <select class="custom-select added_gpmates" id="added_participants_2">
-                  <option selected>Group mate...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
+                  <option selected></option>
                 </select>
 
                 <select class="custom-select" id="currency">
@@ -95,7 +89,7 @@
                   <option value="3">Yen</option>
                 </select>
 
-                <input type="number" class="form-control amount" id="amount">
+                <input type="number" class="form-control amount" id="amount" min="0" step="0.01">
 
                 <span class="random_text"> for </span>
 
