--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <!--h6>Participants added: <span id="num_participants">0</span></h6-->
                 <br><p>Transactions added: <span id="num_transactions">0</span></p></br>
                 <div id="done_adding_transactions">
-                    <button type="submit" class="btn btn-primary pl-5 pr-5" id="done_adding_trans_btn">Done Adding</button>
+                    <button type="button" class="btn btn-primary pl-5 pr-5" id="done_adding_trans_btn">Done Adding</button>
                   </div>
               </div><!--End of transactions_div-->
               
