--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
               <form class="form-inline">
               <div style="margin-top: 5%;" id="transactions_div">
                 <select class="custom-select added_gpmates" id="added_participants_1">
-                  <option selected>debtor</option>
+                  <option selected>Borrower</option>
                 </select>
                 <span class="random_text">owes</span>
                 <select class="custom-select added_gpmates" id="added_participants_2">
-                  <option selected>creditor</option>
+                  <option selected>Lender</option>
                 </select>
 
                 <select class="custom-select" id="currency">
@@ -112,7 +112,7 @@
                 <br>
                   <p>
                     <a data-toggle="collapse" href="#addedTransactions" role="button" aria-expanded="false" aria-controls="collapseExample" id="trans_view_link">
-                      <span id="see_or_hide">See</span> the <span id="num_transactions">0</span> transactions added
+                      <span id="see_or_hide">See</span> the <span id="num_transactions">0</span> transactions <span id="added_or_resolved">added</span>
                     </a>
                   </p>
                   <div class="collapse" id="addedTransactions">
